<resources>
    <string name="app_name">SIA</string>
    <string name="nav_home">Home</string>
    <string name="nav_daftar">Daftar</string>
    <string name="nav_biodata">Profile</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="ubah_biodata">Ubah Biodata</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password Baru</string>
    <string name="ubah">Ubah</string>
    <string name="selamat_dtng">SELAMAT DATANG</string>
    <string name="home">Home</string>
    <string name="kode_pgw">Kode Pegawai</string>
    <string name="nama_pgw">Nama Pegawai</string>
    <string name="gelar_dpn">Gelar Depan</string>
    <string name="gelar_blk">Gelar Belakang</string>
    <string name="nik">NIK</string>
    <string name="file_nik">File NIK</string>
    <string name="npwp">NPWP</string>
    <string name="file_npwp">File NPWP</string>
    <string name="alamat_skr">Alamat Sekarang</string>
    <string name="telp_rumah">Telp. Rumah</string>
    <string name="no_hp1">No. HP 1</string>
    <string name="email1">E-mail 1</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="status_keluar">Status Keluar</string>
    <string name="status_pgw">Status Pegawai</string>
    <string name="nidn">NIDN</string>
    <string name="alamat_ktp">Alamat KTP</string>
    <string name="email2">E-mail 2</string>
    <string name="no_hp2">No. Hp 2</string>
    <string name="nomor_mhs">Nomor Mahasiswa</string>
    <string name="nama_mhs">Nama Mahasiswa</string>
    <string name="kabupaten_skr">Kabupaten Sekarang</string>
    <string name="kodePos_skr">Kode Pos Sekarang</string>
    <string name="alamat_asal">Alamat Asal</string>
    <string name="kabupaten_asal">Kabupaten Asal</string>
    <string name="kodePos_asal">Kode Pos Asal</string>
    <string name="nama_ayah">Nama Ayah</string>
    <string name="email">Email</string>
    <string name="no_hp">No. HP</string>
    <string name="nisn">NISN</string>
    <string name="tgl_lahir_ayah">Tanggal Lahir Ayah</string>
    <string name="nama_ibu_kandung">Nama Ibu Kandung</string>
    <string name="tgl_lahir_ibu">Tanggal Lahir Ibu</string>
    <string name="nik_ayah">NIK Ayah</string>
    <string name="nik_ibu">NIK Ibu</string>
</resources>
