<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BiodataDosen">

    <TextView
        android:id="@+id/fiturHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTowny"
        android:padding="8dp"
        android:text="@string/ubah_biodata"
        android:textAppearance=
            "@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <ScrollView
        android:id="@+id/scrolHeading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fiturHeading"
        android:layout_marginTop="35dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fiturHeading">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/KodePegawai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kode_pgw"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textKodePegawai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_below="@+id/KodePegawai"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/namaPegawai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_pgw"
                android:layout_below="@+id/textKodePegawai"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textNamaPegawai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_below="@+id/namaPegawai"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/gelarDepan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gelar_dpn"
                android:layout_below="@+id/textNamaPegawai"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textGelarDepan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gelarDepan"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/gelarBelakang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gelar_blk"
                android:layout_below="@+id/textGelarDepan"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textGelarBelakang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gelarBelakang"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/nik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nik"
                android:layout_below="@+id/textGelarBelakang"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textNik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_below="@+id/nik"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/fileNik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_nik"
                android:layout_below="@+id/textNik"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textFileNik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fileNik"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/npwp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/npwp"
                android:layout_below="@+id/textFileNik"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textNpwp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/npwp"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/fileNpwp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/file_npwp"
                android:layout_below="@+id/textNpwp"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textFileNpwp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fileNpwp"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/alamatSkr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/alamat_skr"
                android:layout_below="@+id/textFileNpwp"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textAlamatSkr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLength="255"
                android:maxLines="8"
                android:minLines="4"
                android:scrollbars="vertical"
                android:layout_below="@+id/alamatSkr"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/telpRumah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/telp_rumah"
                android:layout_below="@+id/textAlamatSkr"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textTelpRumah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/telpRumah"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/noHp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/no_hp1"
                android:layout_below="@+id/textTelpRumah"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textNoHp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noHp1"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/email1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/email1"
                android:layout_below="@+id/textNoHp1"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textEmail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/email1"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/tempatLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/tempat_lahir"
                android:layout_below="@+id/textEmail1"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textTempatLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tempatLahir"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/tanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/tgl_lahir"
                android:layout_below="@+id/textTempatLahir"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textTanggalLahir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tanggalLahir"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/jenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/jenis_kelamin"
                android:layout_below="@+id/textTanggalLahir"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textJenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_below="@+id/jenisKelamin"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/statusKeluar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/status_keluar"
                android:layout_below="@+id/textJenisKelamin"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <Spinner
                android:id="@+id/textStatusKeluar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statusKeluar"
                android:layout_marginTop="5dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/statusPegawai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/status_pgw"
                android:layout_below="@+id/textStatusKeluar"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <Spinner
                android:id="@+id/textStatusPegawai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/statusPegawai"
                android:layout_marginTop="5dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/nidn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/nidn"
                android:layout_below="@+id/textStatusPegawai"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textNidn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="15"
                android:layout_below="@+id/nidn"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/alamatKtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/alamat_ktp"
                android:layout_below="@+id/textNidn"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textAlamatKtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLength="255"
                android:maxLines="8"
                android:minLines="4"
                android:scrollbars="vertical"
                android:layout_below="@+id/alamatKtp"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/email2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/email2"
                android:layout_below="@+id/textAlamatKtp"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textEmail2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_below="@+id/email2"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <TextView
                android:id="@+id/noHp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/no_hp2"
                android:layout_below="@+id/textEmail2"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <EditText
                android:id="@+id/textNoHp2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/noHp2"
                android:layout_marginTop="5dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"/>

            <Button
                android:id="@+id/tombol_ubah"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textNoHp2"
                android:layout_marginStart="240dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_rectangle_button"
                android:text="@string/ubah"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>