<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UbahPasswordMahasiswa">

    <TextView
        android:id="@+id/fiturHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTowny"
        android:padding="8dp"
        android:text="@string/ubah_password"
        android:layout_gravity="center"
        android:textAppearance=
            "@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPasslama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorText"
        app:layout_constraintTop_toBottomOf="@+id/fiturHeading"
        android:layout_marginTop="130dp">

        <EditText
            android:id="@+id/txtPassLamaMhs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_lama"
            android:inputType="textPassword"
            android:maxLength="10"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassBaru"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorText"
        app:layout_constraintTop_toBottomOf="@+id/layoutPasslama"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/txtPassBaruMhs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password_baru"
            android:inputType="textPassword"
            android:maxLength="10"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassKonf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorText"
        app:layout_constraintTop_toBottomOf="@+id/layoutPassBaru"
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/txtKonfirmasiPassMhs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/konfirmasi_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnUbahPassMhs"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rectangle_button"
        android:text="@string/ubah"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutPassKonf"/>

</androidx.constraintlayout.widget.ConstraintLayout>